[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
image = "0.24.5"
lazy_static = "1.4.0"
nokhwa = { version = "0.10.3", features = ["input-native"] }
thiserror = "1.0.38"
tracing = "0.1.37"
