[package]
name = "lab_00-native-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
eframe = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
image = "0.24.5"
imageproc = "0.23.0"
lazy_static = "1.4.0"
nokhwa = { version = "0.10.3", features = ["input-native"] }
simple_moving_average = "0.1.2"
single_value_channel = "1.2.2"
tracing = "0.1.37"
